2009-20-10  Jarkko Sakkinen  <jarkko.sakkinen@iki.fi>

	* include/winuser.h (WM_TOUCHMOVE, WM_TOUCHDOWN, WM_TOUCHUP,
	TOUCHEVENTF_DOWN, TOUCHEVENTF_INRANGE, TOUCHEVENTF_MOVE,
	TOUCHEVENTF_NOCOALESCE, TOUCHEVENTF_PALM, TOUCHEVENTF_PEN,
	TOUCHEVENTF_PRIMARY, TOUCHEVENTF_UP, TOUCHEVENTMASKF_CONTACTAREA,
	TOUCHEVENTMASKF_EXTRAINFO, TOUCHEVENTMASKF_TIMEFROMSYSTEM, TOUCHINPUT,
	CloseTouchInputHandle, GetTouchInputInfo, IsTouchWindow,
	RegisterTouchWindow, UnregisterTouchWindow): Define.
	* lib/user32.def (CloseTouchInputHandle, GetTouchInputInfo, IsTouchWindow,
	RegisterTouchWindow, UnregisterTouchWindow): Define.

2009-20-10  Dmitry Potapov  <dpotapov@users.sourceforge.net>

	* include/winver.h (VerQueryValue[AW]): Correct definition.

2009-20-10  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/shlobj.h (SHARD): Add enum.
	(SHARD_PATH): Define based on UNICODE.

	Thanks to Jacek Caban for the report.

2009-14-09  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/wingdi.h (_devicemodeW, _devicemodeA): Correct definition.

	Thanks to Bruno Martinez for the report.

2009-14-09  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/shlobj.h (IDO_SHGIOI_SHARE, IDO_SHGIOI_LINK, IDO_SHGIOI_SLOWFILE,
	IDO_SHGIOI_DEFAULT, SHGetIconOverlayIndexW, SHGetIconOverlayIndexA,
	SHGetIconOverlayIndex): Define.

	Thanks to Tim Kosse for the report.

2009-13-09  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/wincon.h (AttachConsole): Correct guard.

	Thanks to Alexander Shaduri for the report.

2009-13-09  Robert Moerland  <rjmoerland@users.sourceforge.net>

	* include/wininet.h (NTERNET_CACHE_ENTRY_INFOW): Correct definition.
	(DeleteUrlCacheEntryW, DeleteUrlCacheEntryA): Define.

2009-13-09  Jacky Lai  <crazyjacky@users.sourceforge.net>

	* include/winerror.h: Fix typos in macro names.

2009-13-09  Jan Nijtmans  <nijtmans@users.sourceforge.net>

	* include/winuser.h (SendMessageTimeoutA, SendMessageTimeoutW): Correct
	definition.
