@@ -40,6 +40,7 @@ DSA_GetItem@12
 DSA_GetItemPtr@8
 DSA_InsertItem@12
 DSA_SetItem@12
+DefSubclassProc@16
 DelMRUString@8
 DestroyPropertySheetPage@4
 DrawInsert@12
@@ -55,6 +56,7 @@ Free@4
 FreeMRUList@4
 GetEffectiveClientRect@12
 GetSize@4
+GetWindowSubclass@16
 ImageList_Add@12
 ImageList_AddIcon@8
 ImageList_AddMasked@12
@@ -101,6 +103,7 @@ PropertySheet@4
 PropertySheetA@4
 PropertySheetW@4
 ReAlloc@8
+RemoveWindowSubclass@12
 SendNotify@16
 SendNotifyEx@20
 SetWindowSubclass@16
